image links fixed

--- a/integrations/github.mdx
+++ b/integrations/github.mdx
@@ -27,11 +27,11 @@ To integrate GitHub with your Shuttle project, follow these steps:
 
 1. Navigate to [console.shuttle.dev/account/integrations](https://console.shuttle.dev/account/integrations) to access your account integrations page.
 
-   ![Integrations page](images/github/integrations-page.png)
+   ![Integrations page](/images/github/integrations-page.png)
 
 2. Click "Connect to GitHub" to authorize Shuttle to access your repositories. You'll be redirected to GitHub to grant the necessary permissions.
 
-   ![Install Shuttle app](images/github/install-shuttle-app.png)
+   ![Install Shuttle app](/images/github/install-shuttle-app.png)
 
 3. GitHub will prompt you to select specific repositories you want to grant Shuttle access to. You can authorize all repositories or select individual ones.
 
@@ -39,27 +39,27 @@ To integrate GitHub with your Shuttle project, follow these steps:
 
 1. Navigate to [https://console.shuttle.dev/new-project](https://console.dev.shuttle.dev/new-project) and select "**Github Repository**".
 
-   ![New project page](images/github/new-project-page.png)
+   ![New project page](/images/github/new-project-page.png)
 
 2. Once authorized, you'll see a list of your available repositories. Select the repository you want to deploy.
 
-   ![GitHub projects list](images/github/github-projects-list.png)
+   ![GitHub projects list](/images/github/github-projects-list.png)
 
 3. Confirm the repo is configured to run on Shuttle. See migration docs here.
 
-   ![Disclaimer step](images/github/disclaimer-step.png)
+   ![Disclaimer step](/images/github/disclaimer-step.png)
 
 4. Select the branch you would like to deploy.
 
-   ![Select branch](images/github/select-branch.png)
+   ![Select branch](/images/github/select-branch.png)
 
 5. If required, add secrets to your project.
 
-   ![Secrets](images/github/secrets.png)
+   ![Secrets](/images/github/secrets.png)
 
 6. Confirm deployment and your project will be deployed to Shuttle.
 
-   ![Confirm deploy](images/github/confirm-deploy.png)
+   ![Confirm deploy](/images/github/confirm-deploy.png)
 
 7. Once deployment is complete, your application will be live and accessible. You can view your deployed project in the Shuttle console, where you'll find the deployment logs, status, and your application's URL.
 
@@ -68,7 +68,7 @@ To integrate GitHub with your Shuttle project, follow these steps:
 1. Navigate to **project** **settings** of your desired project. If you haven't already connect your Github account to Shuttle.
 2. Once authorized, you'll see a list of your available repositories. Select the repository you want to connect to this Shuttle project.
 
-   ![Manage connection](images/github/manage-connection.png)
+   ![Manage connection](/images/github/manage-connection.png)
 
 3. After selecting your repository, confirm the connection. Your Shuttle project is now linked to your GitHub repository.
 
@@ -79,11 +79,11 @@ With GitHub connected, your deployment workflow becomes straightforward. When yo
 1. Navigate to project settings and ensure a Github repo is connected to the project.
 2. Enable **Automatic Deployments**
 
-   ![Auto deploy button](images/github/auto-deploy-button.png)
+   ![Auto deploy button](/images/github/auto-deploy-button.png)
 
 3. Select and confirm branch.
 
-   ![Auto deploy button on](images/github/auto-deploy-button-on.png)
+   ![Auto deploy button on](/images/github/auto-deploy-button-on.png)
 
 4. Git.push to selected branch and a deployment will automatically begin.
 
@@ -96,15 +96,15 @@ Deploying a template sets up both the Shuttle project and a new GitHub repositor
 1. Navigate to [https://console.shuttle.dev/new-project](https://console.dev.shuttle.dev/new-project) and select "**Template**".
 2. Select desired template.
 
-   ![Deploy template page](images/github/deploy-template-page.png)
+   ![Deploy template page](/images/github/deploy-template-page.png)
 
 3. Choose "**Deploy from Github**" development flow and authorise if required.
 
-   ![Template step 2](images/github/template-step-2.png)
+   ![Template step 2](/images/github/template-step-2.png)
 
 4. Select which Github account you would like the template to be generated to and name repo.
 
-   ![Template step 3](images/github/template-step-3.png)
+   ![Template step 3](/images/github/template-step-3.png)
 
 5. If required, add secrets and **deploy**.
 
@@ -118,6 +118,6 @@ On the Growth tier, you have full access to all GitHub features. You can connect
 
 You can disconnect or reconnect your GitHub repository at any time from your project settings. Disconnecting removes the link between Shuttle and your repository but doesn't affect your deployed application or your GitHub repository itself.
 
-![Settings page GitHub](images/github/settings-page-github.png)
+![Settings page GitHub](/images/github/settings-page-github.png)
 
 To connect a different repository, disconnect the current one first, then follow the connection process again with your new repository selection.
