link to migration docs added

--- a/integrations/github.mdx
+++ b/integrations/github.mdx
@@ -45,7 +45,7 @@ To integrate GitHub with your Shuttle project, follow these steps:
 
    ![GitHub projects list](/images/github/github-projects-list.png)
 
-3. Confirm the repo is configured to run on Shuttle. See migration docs here.
+3. Confirm the repo is configured to run on Shuttle. See [migration docs](/migration/guide).
 
    ![Disclaimer step](/images/github/disclaimer-step.png)
 
