--- a/integrations/mcp-server.mdx
+++ b/integrations/mcp-server.mdx
@@ -1,5 +1,5 @@
 ---
-title: MCP server
+title: Shuttle MCP
 description: How to set up the Shuttle MCP server for use in AI coding assistants
 icon: sparkles
 ---
