cicd page updated

--- a/integrations/ci-cd.mdx
+++ b/integrations/ci-cd.mdx
@@ -4,23 +4,7 @@ description: "Streamline your Rust projects with Shuttle CI/CD"
 icon: "code-branch"
 ---
 
-<Callout>
-  Connecting your GitHub account via the [GitHub
-  integration](/integrations/github) is easier and simpler for automatic
-  deployments. However, if your deployment requires building other static assets
-  like React or Vue builds, you'll need to set up a custom GitHub Action and run
-  the build script first before deploying to Shuttle.
-</Callout>
-
-## Which Should I Use?
-
-| Your Project                                  | Use This               |
-| :-------------------------------------------- | :--------------------- |
-| Pure Rust backend (Axum, Actix, Rocket)       | **GitHub Integration** |
-| Rust + pre-built static files commited to git | **GitHub Integration** |
-| Rust + React/Vue build step                   | **GitHub Actions**     |
-| Rust + Asset compilation (SCSS, Tailwind)     | **GitHub Actions**     |
-| Rust + Code generation before deploy          | **GitHub Actions**     |
+Connecting your GitHub account via the [GitHub integration](/integrations/github) is easier and simpler for automatic deployments. However, if your deployment requires building other static assets like React or Vue builds, you'll need to set up a custom GitHub Action and run the build script first before deploying to Shuttle.
 
 Shuttle provides a GitHub Action for automating deployments. This action can run the `shuttle deploy` command for you, enabling continuous deployments on every push.
 
