--- a/integrations/github.mdx
+++ b/integrations/github.mdx
@@ -73,7 +73,7 @@ Once you've connected a GitHub repository to your Shuttle project, you can push 
 
 Deploying a template sets up both the Shuttle project and a new GitHub repository in your connected GitHub account. You get a fully functional application deployed on Shuttle with the complete source code in your GitHub account.
 
-1. Navigate to [Shuttle Console](https://console.dev.shuttle.dev/new-project) and select "**Template".**
+1. Navigate to [Shuttle Console](https://console.shuttle.dev/new-project) and select "**Template".**
 2. Select desired template.
 3. Choose "**Deploy from GitHub**" development flow and authorise if required.
 4. Select which GitHub account you would like the template to be generated to and name repository.
